@startuml
class parser.light.PointLight {
}
class raytracer.RayTracer {
- Scene scene
- int imgHeight
- int imgWidth
- Camera camera
+ double getPixelWidth()
+ void view()
- double getT(Vector,double)
}
class parser.Camera {
- Vector lookFrom
- Vector lookAt
- Vector up
- int fov
+ Vector getW()
+ Vector getU()
+ Vector getV()
+ double getFovR()
+ double getPixelHeight()
+ Vector getLookFrom()
+ Vector getLookAt()
+ Vector getUp()
+ int getFov()
+ void setFov(int)
+ String toString()
}
interface parser.scene.Builder {
~ void setCamera(Camera)
~ void setDimensions(int,int)
~ void addLight(Light)
~ void addObject(SceneObjects)
~ Scene build()
}
class parser.light.DirectionalLight {
}
class parser.scene.Scene {
- File output
- Camera camera
- int height
- int width
- List<Light> light
- List<SceneObjects> sceneobj
- List<Color> colors
- Color ambient
- List<Point> points
+ File getOutput()
+ Camera getCamera()
+ List<Light> getLight()
+ List<SceneObjects> getSceneobj()
+ int getHeight()
+ List<Color> getColors()
+ int getWidth()
+ Color getAmbient()
+ Point getPoint(int)
+ List<Sphere> getSphere()
}
class triplet.Point {
- Triplet coor
+ Triplet getCoor()
+ void setCoor(Triplet)
+ Vector sub(Point)
+ Point multiply(double)
+ String toString()
}
class parser.objects.Sphere {
- double radius
- Triplet position
+ double getRadius()
+ Triplet getPosition()
+ void setPosition(Triplet)
}
class parser.scene.SceneBuilder {
+ File output
- Camera camera
- int height
- int width
- List<Light> lights
- List<SceneObjects> sceneObjs
- Color ambient
- Color diffuse
- Color specular
- int shininess
- int maxverts
- List<Point> points
- List<Color> colors
+ void setOutput(File)
+ File getOutput()
+ void setCamera(Camera)
+ void setDimensions(int,int)
+ void setAmbient(Color)
+ void setDiffuse(Color)
+ void setSpecular(Color)
+ void setShininess(int)
+ void setMaxverts(int)
+ int getMaxverts()
+ int getShininess()
+ Color getSpecular()
+ Color getDiffuse()
+ Color getAmbient()
+ Point getPoint(int)
+ SceneObjects getObj(int)
+ void addLight(Light)
+ void addPoint(Point)
+ void addObject(SceneObjects)
+ Scene build()
}
abstract class parser.scene.SceneObjects {
- Triplet diffuseColor
- Triplet specularColor
- int shininess
~ SceneBuilder sceneBuilder
+ Triplet getDiffuseColor()
+ Triplet getSpecularColor()
+ int getShininess()
+ void setDiffuseColor()
+ void setSpecularColor()
+ void setShininess(int)
}
class triplet.Triplet {
- double x
- double y
- double z
+ double getX()
+ void setX(double)
+ double getY()
+ void setY(double)
+ double getZ()
+ void setZ(double)
+ Triplet add(Triplet)
+ Triplet sub(Triplet)
+ Triplet multiply(double)
+ double scalarProduct(Triplet)
+ Triplet vectorProduct(Triplet)
+ Triplet schurProduct(Triplet)
+ double length()
+ Triplet normalize()
+ String toString()
}
class Main {
+ {static} void main(String[])
}
class parser.objects.Triangle {
- Triplet vertex1
- Triplet vertex2
- Triplet vertex3
- Triplet normal
}
class triplet.Vector {
- Triplet coor
+ Triplet getCoor()
+ void setCoor(Triplet)
+ Point add(Point)
+ Vector add(Vector)
+ Vector sub(Vector)
+ Vector multiply(double)
+ double scalarProduct(Vector)
+ Vector vectorProduct(Vector)
+ double length()
+ Vector normalize()
+ String toString()
}
class parser.objects.Plane {
- Triplet normal
- Triplet positionPoint
}
class triplet.Color {
- Triplet coor
+ Triplet getCoor()
+ void setCoor(Triplet)
+ Color add(Color)
+ Color multiply(double)
+ Color schurProduct(Color)
+ String toString()
}
class parser.Parser {
+ {static} SceneBuilder sceneBuilder
- File file
- BufferedReader in
+ Scene build()
}
abstract class parser.light.Light {
- Triplet coordinate
- Color color
+ Triplet getCoordinate()
+ Color getColor()
+ void setCoordinate(Triplet)
+ void setColor(Color)
}


parser.light.Light <|-- parser.light.PointLight
parser.light.Light <|-- parser.light.DirectionalLight
parser.scene.SceneObjects <|-- parser.objects.Sphere
parser.scene.Builder <|.. parser.scene.SceneBuilder
parser.scene.SceneObjects <|-- parser.objects.Triangle
parser.scene.SceneObjects <|-- parser.objects.Plane
@enduml